[package]
name = "ra-tls-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Mutual RA-TLS TCP proxy: terminates TLS with attestation cert verification and forwards to a backend"
repository = "https://github.com/TeeSQL/ra-tls-proxy"
homepage = "https://github.com/TeeSQL/ra-tls-proxy"
keywords = ["ra-tls", "tls", "proxy", "tee", "attestation"]
categories = ["network-programming", "cryptography"]

[dependencies]
ra-tls-parse = { path = "../ra-tls-parse" }
rustls = "0.23"
rustls-pki-types = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
